# jot

./: Cargo.toml  README.md  convert.py  readme.md
.github/workflows/: ci.yml  release.yml
src/: config.rs  constants.rs  jot.rs  main.rs  model.rs  time_infer.rs  utils.rs
src/commands/: create.rs  edit.rs  mod.rs  notify.rs  tags.rs  view.rs
