[package]
name = "jot"
version = "0.1.0"
authors = ["Brian Dawn <brian.t.dawn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify-rust = "3"
anyhow = "1"
dirs = "2.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
clap = "2.33"
colorful = "0.2"
chrono = "0.4.11"
