[package]
name = "jot"
version = "0.2.0"
authors = ["Brian Dawn <brian.t.dawn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
dirs = "2.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
clap = "2.33"
colorful = "0.2"
chrono = "0.4.11"
regex = "1"
scrawl = "1.1.0"
itertools = "0.9"
lazy_static = "1.4.0"
tempfile = "3"
prettytable-rs = "0.8.0"
console = "0.10.0"
textwrap = { version = "0.11", features = ["term_size"] }
rand = "0.7.3"
